2013-05-19  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* index.php: Updated to jQuery 1.9. Also imported the migrate plugin.

	* operation/projects/project: Added trim to search box.

	* operation/projects/project_detail: Added trim to name of project.
	Added validation to name of project: required and ajax check for avoid
	duplicates. Fixed an autocompletion's bug on Project manager's box.
	
	* include/js/jquery.validation.functions.js: New.
	Functions for validate form elements.
		
	* include/ajax/remote_validations.php: New.
	File for ajax validations.
	
	* godmode/usuarios/configurar_usuarios.php: Minor fix.
	
	* operation/inventories/inventory_search.php: Minor fix.

2013-05-19  Sancho Lerena <slerena@artica.es>

	* include/integria_cron.php: Added support to local mail() delivery.

	* include/functions_config.php,
        include/config_process.php: Mino fixes.

	* include/languages/index.pot: Added strings to pot index.

	* operation/leads/lead_detail.php
	operation/leads/lead_mail.php: Fixes.

	* operation/inventories/inventory_search.php,
	operation/contacts/contact_detail.php: Removed UTF chars from translatable
	strings.
	
	* godmode/setup/setup_mail.php: Added hint to let user know if host is
	in blank, will be used local mail delivery.

2013-05-17  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php: Changes in
	import inventories from csv.

2013-05-17  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php
	  operation/side_menu.php: Added import inventories
	from csv.
	
	* operation/inventories/inventory_import_objects.php
	  include/js/jquery-1.9.0.js
	  include/js/jquery.validate.js
	  include/js/jquery.validate.min.js: Added files.

	* godmode/usuarios/configurar_usuarios.php: Validate form.

2013-05-14  Sancho Lerena <slerena@artica.es>

        * integria_dbdata.sql,
        integria_demo.sql,
        integria_db.sql: Fixed load datasets for "demo" and dbscheme 
	for small errors.
