@@ -653,6 +653,19 @@ function loadTable(type, div_id, less_branchs, id_father, sql_search) {
 	loadSubTree(type, div_id, less_branchs, id_father, sql_search);		
 }
 
+
+function toggleInventoryInfo(id_inventory) {
+	display = $('.inventory_more_info_' + id_inventory).css('display');
+	
+	if (display != 'none') {
+		$('.inventory_more_info_' + id_inventory).css('display', 'none');
+	}
+	else {
+		$('.inventory_more_info_' + id_inventory).css('display', '');
+	}
+}
+
+	
 $(document).ready (function () {
 	
 	$("#text-owner").autocomplete ("ajax.php",
