@@ -43,6 +43,7 @@ switch ($action) {
 			$external_reference_field = "";
 			$unique = 0;
 			$inherit = 0;
+			$show_list = 0;
 			break;
 	case "update":
 			$object_type_field = get_db_row_filter('tobject_type_field', array('id' => $id_object_type_field));
@@ -52,7 +53,8 @@ switch ($action) {
 			$external_table_name = $object_type_field["external_table_name"];
 			$external_reference_field = $object_type_field["external_reference_field"];
 			$unique = $object_type_field["unique"];
-			$inherit = $object_type_field["inherit"];	
+			$inherit = $object_type_field["inherit"];
+			$show_list = $object_type_field["show_list"];
 			break;			
 }
 
@@ -94,6 +96,8 @@ $table->data[5][0] = '<label>' . __('Unique') . print_help_tip(__('With this val
 $table->data[6][0] = print_checkbox ('unique', 1, $unique, __('Unique'));
 $table->data[7][0] = '<label>' . __('Inherit') . print_help_tip(__('With this value checked this field will inherit the values of owner, users and companies of the parent inventory object (at creation time).'), true) . '</label>';
 $table->data[8][0] = print_checkbox ('inherit', 1, $inherit, __('Inherit'));
+$table->data[9][0] = '<label>' . __('Show in list') . print_help_tip(__('With this value checked this field will be displayed in search list.'), true) . '</label>';
+$table->data[10][0] = print_checkbox ('show_list', 1, $show_list, __('Show in list'));
 
 echo "<form method='post' action='index.php?sec=inventory&sec2=operation/inventories/manage_objects_types_list'>";
 print_table ($table);
